Add BooleanInteger filter for convenience
